--- a/index.html
+++ b/index.html
@@ -1,195 +1,79 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Captura de Servicios</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 700px;
-      margin: 40px auto;
-      background: #e3f2fd; /* Fondo azul institucional */
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      position: relative;
-    }
-    h2 {
-      text-align: center;
-      color: #003366;
-      margin-bottom: 20px;
-    }
-    #logo {
-      display: block;
-      margin: 0 auto 20px auto;
-      width: 180px;
-    }
-    .row {
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-    .row > div {
-      flex: 1;
-      min-width: 150px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
-      color: #003366;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 4px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 14px;
-    }
-    textarea {
-      resize: vertical;
-    }
-    .buttons {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 20px;
-    }
-    button {
-      padding: 10px 16px;
-      border: none;
-      border-radius: 4px;
-      background-color: #0078D4;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #005a9e;
-    }
-    #telegramText {
-      margin-top: 20px;
-      font-size: 0.9em;
-      background: #eef;
-      padding: 10px;
-      border-radius: 4px;
-      white-space: pre-wrap;
-    }
-    .marca-agua {
-      margin-top: 30px;
-      text-align: center;
-      font-size: 12px;
-      color: #666;
-      border-top: 1px solid #ccc;
-      padding-top: 10px;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f4f4f4; }
+    label, input, select, textarea, button { display: block; margin: 10px 0; width: 100%; max-width: 400px; }
+    button { padding: 10px; font-weight: bold; }
+    .watermark { font-size: 0.8em; color: #888; margin-top: 30px; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img id="logo" src="logo_institucional.png" alt="Logo Institucional" onerror="this.src='https://via.placeholder.com/180x60?text=LOGO';">
-    <h2>Captura de Servicios</h2>
+  <h2>📋 Captura de Servicios</h2>
 
-    <form id="serviceForm">
-      <div class="row">
-        <div>
-          <label for="folio">Folio</label>
-          <input type="text" id="folio" name="folio" required />
-        </div>
-        <div>
-          <label for="fecha">Fecha</label>
-          <input type="date" id="fecha" name="fecha" required />
-        </div>
-        <div>
-          <label for="hora">Hora</label>
-          <input type="time" id="hora" name="hora" required />
-        </div>
-        <div>
-          <label for="telefonista">Telefonista</label>
-          <input type="text" id="telefonista" name="telefonista" required />
-        </div>
-      </div>
+  <label>Telefonista</label>
+  <input type="text" id="telefonista">
 
-      <label for="domicilio">Domicilio</label>
-      <input type="text" id="domicilio" name="domicilio" required />
+  <label>Domicilio</label>
+  <input type="text" id="domicilio">
 
-      <label for="destino">Destino</label>
-      <input type="text" id="destino" name="destino" required />
+  <label>Destino</label>
+  <input type="text" id="destino">
 
-      <label for="asignado">Asignado a</label>
-      <input type="text" id="asignado" name="asignado" required />
+  <label>Asignado a</label>
+  <input type="text" id="asignado">
 
-      <label for="tipo">Tipo de servicio</label>
-      <select id="tipo" name="tipo" required>
-        <option value="">Selecciona</option>
-        <option value="Normal">Normal</option>
-        <option value="Carro amplio">Carro amplio</option>
-        <option value="Pago con transferencia">Pago con transferencia</option>
-        <option value="Pago con tarjeta">Pago con tarjeta</option>
-        <option value="Transporte de mascota">Transporte de mascota</option>
-        <option value="Ida y vuelta">Ida y vuelta</option>
-        <option value="Por tiempo">Por tiempo</option>
-        <option value="Cambio de llanta">Cambio de llanta</option>
-        <option value="Pasar corriente">Pasar corriente</option>
-        <option value="Carro sin rotular">Carro sin rotular</option>
-        <option value="Carro rotulado">Carro rotulado</option>
-        <option value="Mensajería">Mensajería</option>
-        <option value="Guía">Guía</option>
-      </select>
+  <label>Tipo</label>
+  <select id="tipo">
+    <option value="Traslado">Traslado</option>
+    <option value="Consulta">Consulta</option>
+    <option value="Otro">Otro</option>
+  </select>
 
-      <label for="observaciones">Observaciones</label>
-      <textarea id="observaciones" name="observaciones" rows="3"></textarea>
+  <label>Observación</label>
+  <textarea id="observacion"></textarea>
 
-      <div class="buttons">
-        <button type="button" onclick="guardar()">Guardar</button>
-        <button type="button" onclick="enviar()">Enviar</button>
-        <button type="button" onclick="finalizar()">Finalizar turno</button>
-      </div>
-    </form>
+  <button onclick="guardarServicio()">Guardar</button>
+  <button onclick="finalizarTurno()">Finalizar turno</button>
+  <button onclick="copiarTelegram()">Enviar (Telegram)</button>
 
-    <div id="telegramText"></div>
-
-    <div class="marca-agua">
-      Sistema institucional en copropiedad. Uso exclusivo autorizado.
-    </div>
-  </div>
+  <div class="watermark">Solución institucional creada por Jesús Sánchez C. con inteligencia asistida por Copilot.</div>
 
   <script>
-    document.querySelectorAll('input, select, textarea').forEach((el, i, arr) => {
-      el.addEventListener('keydown', e => {
-        if (e.key === 'Enter') {
-          e.preventDefault();
-          arr[i + 1]?.focus();
-        }
-      });
-    });
+    const scriptURL = 'TU_URL_DEL_SCRIPT_AQUI';
 
-    function guardar() {
-      alert("Datos guardados localmente.");
+    function guardarServicio() {
+      const data = {
+        accion: 'guardar',
+        telefonista: document.getElementById('telefonista').value,
+        domicilio: document.getElementById('domicilio').value,
+        destino: document.getElementById('destino').value,
+        asignado: document.getElementById('asignado').value,
+        tipo: document.getElementById('tipo').value,
+        observacion: document.getElementById('observacion').value
+      };
+      fetch(scriptURL, {
+        method: 'POST',
+        body: JSON.stringify(data)
+      }).then(() => alert('Servicio guardado'));
     }
 
-    function enviar() {
-      const form = document.getElementById('serviceForm');
-      const data = new FormData(form);
-      let mensaje = `Captura de Servicio\n`;
-      for (let [key, value] of data.entries()) {
-        mensaje += `${key}: ${value}\n`;
-      }
-      document.getElementById('telegramText').textContent = mensaje;
-      navigator.clipboard.writeText(mensaje);
-      alert("Texto copiado para Telegram.");
+    function finalizarTurno() {
+      const data = {
+        accion: 'finalizar',
+        telefonista: document.getElementById('telefonista').value
+      };
+      fetch(scriptURL, {
+        method: 'POST',
+        body: JSON.stringify(data)
+      }).then(() => alert('Turno finalizado'));
     }
 
-    function finalizar() {
-      if (confirm("¿Deseas finalizar el turno?")) {
-        document.getElementById('serviceForm').reset();
-        document.getElementById('telegramText').textContent = "";
-      }
+    function copiarTelegram() {
+      const texto = `🚑 Servicio\n👤 Telefonista: ${document.getElementById('telefonista').value}\n🏠 Domicilio: ${document.getElementById('domicilio').value}\n📍 Destino: ${document.getElementById('destino').value}\n🚗 Asignado: ${document.getElementById('asignado').value}\n🧾 Tipo: ${document.getElementById('tipo').value}\n📝 Obs: ${document.getElementById('observacion').value}`;
+      navigator.clipboard.writeText(texto).then(() => alert('Texto copiado para Telegram'));
     }
   </script>
 </body>
