--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="watermark">Solución institucional creada por Jesús Sánchez C. con inteligencia asistida por Copilot.</div>
 
   <script>
-    const scriptURL = 'TU_URL_DEL_SCRIPT_AQUI';
+    const scriptURL =https://script.google.com/macros/s/AKfycbYzEM1sMkomA2gURrhekroLVw7Ge7qDp0RXjvPIQXWwijNRSNcdVogOty2xOVqPAxw5Xg/exec';
 
     function guardarServicio() {
       const data = {
