--- a/index.html
+++ b/index.html
@@ -2,145 +2,179 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Captura de Servicios</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #e6f0ff;
       margin: 0;
-      padding: 0;
-    }
-    header {
+      font-family: Arial, sans-serif;
       background-color: #003366;
       color: white;
-      text-align: center;
-      padding: 20px 10px;
-    }
-    header img {
-      max-height: 80px;
-      margin-bottom: 10px;
-    }
-    form {
-      background-color: white;
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .form-row {
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      overflow-y: auto;
+    }
+
+    #bienvenida {
+      text-align: center;
+      font-size: 1.2em;
+      margin: 20px;
+      animation: fadeOut 1s ease-in-out 4s forwards;
+    }
+
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+
+    #formulario {
+      display: none;
+      width: 90%;
+      max-width: 500px;
+      background-color: #ffffff;
+      color: #000;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      margin-bottom: 60px;
+    }
+
+    .campo {
       margin-bottom: 15px;
     }
-    .form-group {
-      flex: 1;
-      min-width: 200px;
-      margin-right: 10px;
-    }
+
     label {
       display: block;
       margin-bottom: 5px;
       font-weight: bold;
     }
-    input, select, textarea {
+
+    input, select, button {
       width: 100%;
-      padding: 8px;
+      padding: 10px;
+      font-size: 1em;
+      border-radius: 5px;
       border: 1px solid #ccc;
-      border-radius: 4px;
     }
+
     button {
       background-color: #003366;
       color: white;
-      padding: 10px 20px;
       border: none;
-      border-radius: 4px;
       cursor: pointer;
-      font-size: 16px;
+      margin-top: 10px;
     }
+
     button:hover {
       background-color: #0055aa;
     }
-    footer {
+
+    #marcaAgua {
+      position: fixed;
+      bottom: 10px;
+      font-size: 0.8em;
+      opacity: 0.5;
       text-align: center;
-      font-size: 12px;
-      color: #666;
-      margin-top: 40px;
+      width: 100%;
+    }
+
+    #logo {
+      width: 100px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Logo institucional" />
-    <h1>Captura de Servicios</h1>
-  </header>
+  <img id="logo" src="https://via.placeholder.com/100x100.png?text=Logo" alt="Logo institucional" />
+  <div id="bienvenida"></div>
 
-  <form id="servicioForm">
-    <div class="form-row">
-      <div class="form-group">
-        <label for="folio">Folio *</label>
-        <input type="text" id="folio" name="folio" required />
-      </div>
-      <div class="form-group">
-        <label for="fecha">Fecha *</label>
-        <input type="date" id="fecha" name="fecha" required />
-      </div>
-      <div class="form-group">
-        <label for="hora">Hora *</label>
-        <input type="time" id="hora" name="hora" required />
-      </div>
-      <div class="form-group">
-        <label for="telefonista">Telefonista *</label>
-        <input type="text" id="telefonista" name="telefonista" required />
-      </div>
+  <div id="formulario">
+    <div class="campo">
+      <label for="folio">Folio</label>
+      <input type="text" id="folio" readonly />
+    </div>
+    <div class="campo">
+      <label for="fecha">Fecha</label>
+      <input type="text" id="fecha" readonly />
+    </div>
+    <div class="campo">
+      <label for="hora">Hora</label>
+      <input type="text" id="hora" readonly />
+    </div>
+    <div class="campo">
+      <label for="telefonista">Telefonista</label>
+      <input type="text" id="telefonista" readonly />
+    </div>
+    <div class="campo">
+      <label for="tipoServicio">Tipo de servicio</label>
+      <select id="tipoServicio" required>
+        <option value="">Selecciona una opción</option>
+        <option>Normal</option>
+        <option>Carro amplio</option>
+        <option>Mensajería</option>
+        <option>Mensajería compras</option>
+        <option>Guía</option>
+        <option>Cambio de llanta</option>
+        <option>Pasar corriente</option>
+        <option>Carro sin rotular</option>
+        <option>Carro rotulado</option>
+        <option>Transporte de mascota</option>
+        <option>Otro</option>
+      </select>
     </div>
 
-    <div class="form-row">
-      <div class="form-group">
-        <label for="domicilio">Domicilio *</label>
-        <input type="text" id="domicilio" name="domicilio" required />
-      </div>
-      <div class="form-group">
-        <label for="destino">Destino *</label>
-        <input type="text" id="destino" name="destino" required />
-      </div>
-    </div>
+    <button onclick="guardar()">Guardar</button>
+    <button onclick="finalizarTurno()">Finalizar turno</button>
+    <button onclick="copiarTelegram()">Enviar</button>
+  </div>
 
-    <div class="form-row">
-      <div class="form-group">
-        <label for="asignado">Asignado a *</label>
-        <input type="text" id="asignado" name="asignado" required />
-      </div>
-      <div class="form-group">
-        <label for="tipo">Tipo de servicio *</label>
-        <select id="tipo" name="tipo" required>
-          <option value="">Selecciona una opción</option>
-          <option value="Traslado programado">Traslado programado</option>
-          <option value="Urgencia">Urgencia</option>
-          <option value="Consulta externa">Consulta externa</option>
-          <option value="Alta hospitalaria">Alta hospitalaria</option>
-          <option value="Interhospitalario">Interhospitalario</option>
-          <option value="Apoyo institucional">Apoyo institucional</option>
-          <option value="Otro">Otro</option>
-        </select>
-      </div>
-    </div>
+  <div id="marcaAgua">Jesús Sánchez C. · Sistema institucional · Copilot</div>
 
-    <div class="form-row">
-      <div class="form-group" style="flex: 1;">
-        <label for="observaciones">Observaciones</label>
-        <textarea id="observaciones" name="observaciones" rows="3"></textarea>
-      </div>
-    </div>
+  <script>
+    function mostrarBienvenida() {
+      const hora = new Date().getHours();
+      let saludo = "Buenas noches";
+      if (hora >= 6 && hora < 12) saludo = "Buenos días";
+      else if (hora >= 12 && hora < 18) saludo = "Buenas tardes";
 
-    <button type="submit">Registrar servicio</button>
-  </form>
+      document.getElementById("bienvenida").innerText = `${saludo}, Jesús Sánchez C. Oprime el botón "Ingresar" para iniciar la captura.`;
 
-  <footer>
-    Solución institucional creada por Jesús Sánchez C. con inteligencia asistida por Copilot.
-  </footer>
+      setTimeout(() => {
+        document.getElementById("formulario").style.display = "block";
+      }, 5000);
+    }
 
-  <script src="script.js"></script>
+    function inicializar() {
+      const ahora = new Date();
+      document.getElementById("folio").value = "F-" + ahora.getTime();
+      document.getElementById("fecha").value = ahora.toLocaleDateString();
+      document.getElementById("hora").value = ahora.toLocaleTimeString();
+
+      // Simulación de telefonista desde hoja de asistencia
+      document.getElementById("telefonista").value = "Jesús Sánchez C.";
+    }
+
+    function guardar() {
+      alert("Datos guardados en hoja SERVICIOS (simulado)");
+      // Aquí va la lógica real de Google Sheets
+    }
+
+    function finalizarTurno() {
+      alert("Turno finalizado y registrado en hoja ASISTENCIA (simulado)");
+      // Aquí va la lógica real de Google Sheets
+    }
+
+    function copiarTelegram() {
+      const tipo = document.getElementById("tipoServicio").value;
+      const texto = `Servicio: ${tipo} | Folio: ${document.getElementById("folio").value}`;
+      navigator.clipboard.writeText(texto);
+      alert("Texto copiado para pegar en Telegram");
+    }
+
+    mostrarBienvenida();
+    inicializar();
+  </script>
 </body>
 </html>
