--- a/index.html
+++ b/index.html
@@ -1,180 +1,126 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Captura de Servicios</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #003366;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      overflow-y: auto;
+      background-color: #f4f6f8;
+      margin: 0;
+      padding: 40px;
+      color: #333;
     }
 
-    #bienvenida {
+    h1 {
       text-align: center;
-      font-size: 1.2em;
-      margin: 20px;
-      animation: fadeOut 1s ease-in-out 4s forwards;
+      color: #005288;
+      margin-bottom: 30px;
     }
 
-    @keyframes fadeOut {
-      to { opacity: 0; visibility: hidden; }
-    }
-
-    #formulario {
-      display: none;
-      width: 90%;
-      max-width: 500px;
+    form {
+      max-width: 600px;
+      margin: auto;
       background-color: #ffffff;
-      color: #000;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      margin-bottom: 60px;
-    }
-
-    .campo {
-      margin-bottom: 15px;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     label {
       display: block;
-      margin-bottom: 5px;
+      margin-top: 20px;
       font-weight: bold;
     }
 
-    input, select, button {
+    input[type="text"],
+    select,
+    textarea {
       width: 100%;
       padding: 10px;
-      font-size: 1em;
-      border-radius: 5px;
+      margin-top: 5px;
       border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+
+    textarea {
+      resize: vertical;
+      height: 80px;
     }
 
     button {
-      background-color: #003366;
+      margin-top: 30px;
+      padding: 12px 20px;
+      background-color: #005288;
       color: white;
       border: none;
+      border-radius: 4px;
+      font-size: 16px;
       cursor: pointer;
-      margin-top: 10px;
     }
 
-    button:hover {
-      background-color: #0055aa;
+    button:disabled {
+      background-color: #999;
+      cursor: not-allowed;
     }
 
-    #marcaAgua {
-      position: fixed;
-      bottom: 10px;
-      font-size: 0.8em;
-      opacity: 0.5;
-      text-align: center;
-      width: 100%;
-    }
-
-    #logo {
-      width: 100px;
+    #mensaje {
       margin-top: 20px;
+      text-align: center;
+      color: #d32f2f;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <img id="logo" src="https://via.placeholder.com/100x100.png?text=Logo" alt="Logo institucional" />
-  <div id="bienvenida"></div>
+  <h1>Captura de Servicios</h1>
 
-  <div id="formulario">
-    <div class="campo">
-      <label for="folio">Folio</label>
-      <input type="text" id="folio" readonly />
-    </div>
-    <div class="campo">
-      <label for="fecha">Fecha</label>
-      <input type="text" id="fecha" readonly />
-    </div>
-    <div class="campo">
-      <label for="hora">Hora</label>
-      <input type="text" id="hora" readonly />
-    </div>
-    <div class="campo">
-      <label for="telefonista">Telefonista</label>
-      <input type="text" id="telefonista" readonly />
-    </div>
-    <div class="campo">
-      <label for="tipoServicio">Tipo de servicio</label>
-      <select id="tipoServicio" required>
-        <option value="">Selecciona una opción</option>
-        <option>Normal</option>
-        <option>Carro amplio</option>
-        <option>Mensajería</option>
-        <option>Mensajería compras</option>
-        <option>Guía</option>
-        <option>Cambio de llanta</option>
-        <option>Pasar corriente</option>
-        <option>Carro sin rotular</option>
-        <option>Carro rotulado</option>
-        <option>Transporte de mascota</option>
-        <option>Otro</option>
-      </select>
-    </div>
+  <form id="formulario-servicio">
+    <label for="nombre">Nombre del telefonista:</label>
+    <input type="text" id="nombre" name="nombre" disabled>
 
-    <button onclick="guardar()">Guardar</button>
-    <button onclick="finalizarTurno()">Finalizar turno</button>
-    <button onclick="copiarTelegram()">Enviar</button>
-  </div>
+    <label for="tipo-servicio">Tipo de servicio:</label>
+    <select id="tipo-servicio" name="tipo-servicio" disabled>
+      <option value="">Seleccione</option>
+      <option value="Consulta">Consulta</option>
+      <option value="Urgencia">Urgencia</option>
+      <option value="Seguimiento">Seguimiento</option>
+    </select>
 
-  <div id="marcaAgua">Jesús Sánchez C. · Sistema institucional · Copilot</div>
+    <label for="observaciones">Observaciones:</label>
+    <textarea id="observaciones" name="observaciones" disabled></textarea>
+
+    <button type="submit" id="btn-enviar" disabled>Registrar servicio</button>
+    <div id="mensaje"></div>
+  </form>
 
   <script>
-    function mostrarBienvenida() {
-      const hora = new Date().getHours();
-      let saludo = "Buenas noches";
-      if (hora >= 6 && hora < 12) saludo = "Buenos días";
-      else if (hora >= 12 && hora < 18) saludo = "Buenas tardes";
-
-      document.getElementById("bienvenida").innerText = `${saludo}, Jesús Sánchez C. Oprime el botón "Ingresar" para iniciar la captura.`;
-
-      setTimeout(() => {
-        document.getElementById("formulario").style.display = "block";
-      }, 5000);
+    function cargarEstado() {
+      google.script.run.withSuccessHandler(function(nombre) {
+        if (nombre) {
+          document.getElementById("nombre").value = nombre;
+          document.querySelectorAll("#formulario-servicio input, #formulario-servicio select, #formulario-servicio textarea, #btn-enviar")
+            .forEach(el => el.disabled = false);
+        } else {
+          document.getElementById("mensaje").textContent = "⚠️ El sistema está bloqueado. Debe iniciar turno antes de capturar servicios.";
+        }
+      }).validarAcceso();
     }
 
-    function inicializar() {
-      const ahora = new Date();
-      document.getElementById("folio").value = "F-" + ahora.getTime();
-      document.getElementById("fecha").value = ahora.toLocaleDateString();
-      document.getElementById("hora").value = ahora.toLocaleTimeString();
+    document.getElementById("formulario-servicio").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const tipo = document.getElementById("tipo-servicio").value;
+      const observaciones = document.getElementById("observaciones").value;
 
-      // Simulación de telefonista desde hoja de asistencia
-      document.getElementById("telefonista").value = "Jesús Sánchez C.";
-    }
+      google.script.run.withSuccessHandler(function() {
+        document.getElementById("mensaje").textContent = "✅ Servicio registrado correctamente.";
+        document.getElementById("tipo-servicio").value = "";
+        document.getElementById("observaciones").value = "";
+      }).registrarServicio(tipo, observaciones);
+    });
 
-    function guardar() {
-      alert("Datos guardados en hoja SERVICIOS (simulado)");
-      // Aquí va la lógica real de Google Sheets
-    }
-
-    function finalizarTurno() {
-      alert("Turno finalizado y registrado en hoja ASISTENCIA (simulado)");
-      // Aquí va la lógica real de Google Sheets
-    }
-
-    function copiarTelegram() {
-      const tipo = document.getElementById("tipoServicio").value;
-      const texto = `Servicio: ${tipo} | Folio: ${document.getElementById("folio").value}`;
-      navigator.clipboard.writeText(texto);
-      alert("Texto copiado para pegar en Telegram");
-    }
-
-    mostrarBienvenida();
-    inicializar();
+    window.onload = cargarEstado;
   </script>
 </body>
 </html>
